<resources>
    <string name="app_name">Celulares</string>
    <string name="titulo">Agregar celular</string>
    <string name="action_settings">Settings</string>
    <string name="codigo">Código</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="ram">RAM</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="agregar">AGREGAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="mensaje">Celular guardado exitosamente</string>
    <string name="eliminar">Eliminar</string>
    <string name="titulo_detalle">Detalle del celular</string>
    <string name="titulo_eliminar">Eliminar celular</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="mensaje_eliminar">¿Seguro que desea eliminar este celular?</string>
</resources>
